Correctifs, background avec color adouci: quasi ok. Texte en contraste: quasi ok. A voir: image jungle forest ou urbaine en vecteur sur le background color pour image et slogan soient concordant.

--- a/css/style.css
+++ b/css/style.css
@@ -17,7 +17,7 @@ body {
   width: 100%;
   height: 1700px;
 
-  background-color: rebeccapurple;
+  background-color: #1f2235;
   /* background-image: url(../images/jungle-1807476_960_720.jpg); */
   /* background-image: url(../images/forestSheets.png); */
   /* background-image: url(../images/the-1865639_960_720.jpg); */
@@ -72,7 +72,6 @@ padding: auto;
   width: 100%;
   height: 80px;
   margin: 10px 0;
-  /* background-color: darkorange; */
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -83,13 +82,11 @@ padding: auto;
 .welcome span {
  font-weight: bold;
  font-size: 22px;
- color: #fff;
+ color: #ffc576;
  width: 45%;
  height: 100px;
  padding: 8px;
  margin: auto;
- background-color: #303030;
- border-radius: 15px;
  justify-content: center;
 }
 .welcome span:last-child {
@@ -101,16 +98,15 @@ padding: auto;
 .main-title {
   width: 100%;
   height: 120px;
-  /* background-color: darkorange; */
   display: flex;
   align-items: center;
   justify-content: center;
 }
 .main-title h1 {
   font-size: 28px;
+  color: #fff;
   width: 70%;
   margin: auto;
-  /* background-color: #808080; */
   display: flex;
   align-items: center;
   flex-direction: column;
@@ -120,31 +116,16 @@ h1 span:first-child {
   width: 75%;
   margin: auto;
   padding: 8px;
-  color: blue;
-
-  /* background-color: aqua */
-  /* background-color: #303030; */
-  border-radius: 15px;
 }
 h1 span:nth-child(2) {
   width: 80%;
   margin: auto;
   padding: 8px;
-  color: #fff;
-
-  /* background-color: lightgreen; */
-  /* background-color: #303030; */
-  border-radius: 15px;
 }
 h1 span:last-child {
   width: 85%;
   margin: auto;
   padding: 8px;
-  color: #fff;
-
-  /* background-color: aqua */
-  /* background-color: #303030; */
-  border-radius: 15px;
 }
 
 /* les sections des présentations
